--- a/c03-landing-page/index.html
+++ b/c03-landing-page/index.html
@@ -5,8 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   
-  <title>Frontend Mentor | Huddle landing page with single introductory section</title>
+  
+  <title>Huddle landing page with single introductory section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -16,12 +19,26 @@
 </head>
 <body>
 
-  Build The Community Your Fans Will Love
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Register
+  <div class="wrapper">
+    <div class="nav">
+      <img src="/c03-landing-page/images/logo.svg" alt="Logo">
+    </div>
+    <div class="splash">
+      <div class="image">
+        <img src="/c03-landing-page/images/illustration-mockups.svg" alt="illustration-mockups">
+      </div>
+      <div class="text">
+        <h1>Build The Community Your Fans Will Love</h1>
+        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+        <div class="register">Register</div>
+      </div>
+    </div>
+    <div class="social">
+      <img src="/c03-landing-page/images/logo-facebook.svg" alt="Facebook">
+      <img src="/c03-landing-page/images/logo-twitter.svg" alt="Twitter">
+      <img src="/c03-landing-page/images/logo-instagram.svg" alt="Instagram">
+    </div>
+  </div>
 
   <footer>
     <p class="attribution">
