--- a/c03-landing-page/index.html
+++ b/c03-landing-page/index.html
@@ -34,17 +34,20 @@
       </div>
     </div>
     <div class="social">
-      <img src="/c03-landing-page/images/logo-facebook.svg" alt="Facebook">
-      <img src="/c03-landing-page/images/logo-twitter.svg" alt="Twitter">
-      <img src="/c03-landing-page/images/logo-instagram.svg" alt="Instagram">
+      <a href="http://facebook.com"><ion-icon name="logo-facebook"></ion-icon></a>
+      <a href="http://twitter.com"><ion-icon name="logo-twitter"></ion-icon></a>
+      <a href="http://instagram.com"><ion-icon name="logo-instagram"></ion-icon></a>
     </div>
   </div>
 
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://alex.utracki.com">Alex</a>.
     </p>
   </footer>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </body>
 </html>
