--- a/c03/index.html
+++ b/c03/index.html
@@ -21,11 +21,11 @@
 
   <div class="wrapper">
     <div class="nav">
-      <img src="/c03-landing-page/images/logo.svg" alt="Logo">
+      <img src="/c03/images/logo.svg" alt="Logo">
     </div>
     <div class="splash">
       <div class="image">
-        <img src="/c03-landing-page/images/illustration-mockups.svg" alt="illustration-mockups">
+        <img src="/c03/images/illustration-mockups.svg" alt="illustration-mockups">
       </div>
       <div class="text">
         <h1>Build The Community Your Fans Will Love</h1>
