--- a/c04/index.html
+++ b/c04/index.html
@@ -89,11 +89,11 @@
 </div>
 
 <div class="p-references">
-  <img src="/c04/images/logo-google.png" alt="Google">
-  <img src="/c04/images/logo-ibm.png" alt="IBM">
-  <img src="/c04/images/logo-microsoft.png" alt="Microsoft">
-  <img src="/c04/images/logo-hp.png" alt="Hewlett Packard">
-  <img src="/c04/images/logo-vector-graphics.png" alt="Vector Graphics">
+  <img src="./c04/images/logo-google.png" alt="Google">
+  <img src="./c04/images/logo-ibm.png" alt="IBM">
+  <img src="./c04/images/logo-microsoft.png" alt="Microsoft">
+  <img src="./c04/images/logo-hp.png" alt="Hewlett Packard">
+  <img src="./c04/images/logo-vector-graphics.png" alt="Vector Graphics">
 </div>
 
 <div class="tightwrapper">
