--- a/c04/index.html
+++ b/c04/index.html
@@ -22,7 +22,7 @@
 
   <header>
     <div class="tightwrapper">
-      <img src="/c04/images/logo.svg" class="logo" alt="Logo">
+      <img src="../c04/images/logo.svg" class="logo" alt="Logo">
       <h1>  A history of everything you copy</h1>
       <p>Clipboard allows you to track and organize everything you 
         copy. Instantly access your clipboard on all your devices.</p>
