image URL update on c04

--- a/c04/index.html
+++ b/c04/index.html
@@ -42,7 +42,7 @@
 
   <div class="p-image-with-side-text">
     <div class="image-1">
-      <img src="/c04/images/image-computer.png" alt="Desktop">
+      <img src="../c04/images/image-computer.png" alt="Desktop">
     </div>
     <div class="list-1">
       <h3>Quick Search</h3>
@@ -61,7 +61,7 @@
     </div>
   </div>
   
-<img src="/c04/images/image-devices.png" alt="Multiple devices" class="image-devices">
+<img src="../c04/images/image-devices.png" alt="Multiple devices" class="image-devices">
   
 <div class="tightwrapper">
   <div class="p-1-text">
@@ -72,28 +72,28 @@
 
 <div class="p-3-column">
   <div class="column-in-3-col">
-    <img src="/c04/images/icon-blacklist.svg" alt="Create blacklists">
+    <img src="../c04/images/icon-blacklist.svg" alt="Create blacklists">
     <h3>Create blacklists</h3>
     <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
   </div>
   <div class="column-in-3-col">
-    <img src="/c04/images/icon-text.svg" alt="Plain text snippets">
+    <img src="../c04/images/icon-text.svg" alt="Plain text snippets">
     <h3>Plain text snippets</h3>
     <p>Remove unwanted formatting from copied text for a consistent look.</p>
   </div>
   <div class="column-in-3-col">
-    <img src="/c04/images/icon-preview.svg" alt="Sneak preview">
+    <img src="../c04/images/icon-preview.svg" alt="Sneak preview">
     <h3>Sneak preview</h3>
     <p>Quick preview of all snippets on your Clipboard for easy access.</p>
   </div>
 </div>
 
 <div class="p-references">
-  <img src="/c04/images/logo-google.png" alt="Google">
-  <img src="/c04/images/logo-ibm.png" alt="IBM">
-  <img src="/c04/images/logo-microsoft.png" alt="Microsoft">
-  <img src="/c04/images/logo-hp.png" alt="Hewlett Packard">
-  <img src="/c04/images/logo-vector-graphics.png" alt="Vector Graphics">
+  <img src="../c04/images/logo-google.png" alt="Google">
+  <img src="../c04/images/logo-ibm.png" alt="IBM">
+  <img src="../c04/images/logo-microsoft.png" alt="Microsoft">
+  <img src="../c04/images/logo-hp.png" alt="Hewlett Packard">
+  <img src="../c04/images/logo-vector-graphics.png" alt="Vector Graphics">
 </div>
 
 <div class="tightwrapper">
@@ -113,7 +113,7 @@
 <footer>
   <div class="ftrwrap">
     <div class="ftr-logo">
-      <img src="/c04/images/logo.svg" alt="">
+      <img src="../c04/images/logo.svg" alt="">
     </div>
     <div class="ftr-menu">
       <a href="https://alex.utracki.com">FAQs</a>
