--- a/c05/index.html
+++ b/c05/index.html
@@ -5,30 +5,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap" rel="stylesheet">
   
-  <title>Frontend Mentor | Huddle landing page with curved sections</title>
+  <title>Huddle landing page with curved sections</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Try it free
+  <div class="container">
+    <header>
+      <img src="../c05/images/logo.svg" alt="Logo">
+      <div class="trybtn">Try it free</div>
+    </header>
+    <div class="hero">
+      <h1>Build The Community Your Fans Will Love</h1>
+      <div class="minicont">
+        <p></p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+        <div class="button">Get Started For Free</div>
+      </div>
+      <img src="../c05/images/screen-mockups.svg" alt="screen mock-up">
+      <div class="twocol">
+        <div class="twocol-col">
+          <img src="../c05/images/icon-communities.svg" alt="Communities">
+          <h1>1.4k+</h1>
+          <p>Communities Formed</p>
+        </div>
+        <div class="twocol-col">
+          <img src="../c05/images/icon-messages.svg" alt="Messages">
+          <h1>2.7m+</h1>
+          <p>Messages Sent</p>
+        </div>
+      </div>
+    </div>
 
-  Build The Community Your Fans Will Love
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does 
-  your audience. Create connections with your users as you engage in genuine discussion. 
 
-  Get Started For Free
+  </div>
+
 
   1.4k+
   Communities Formed
 
-  2.7m+
-  Messages Sent
+
 
   Grow Together
   Generate meaningful discussions with your audience and build a strong, loyal community. 
