--- a/c05/index.html
+++ b/c05/index.html
@@ -15,15 +15,15 @@
   <div class="container">
     <header>
       <img src="../c05/images/logo.svg" alt="Logo">
-      <div class="trybtn">Try it free</div>
+      <a href="http://127.0.0.1:5500/c05/index.html" class="trybtn">Try it free</a>
     </header>
     <div class="hero">
       <h1>Build The Community Your Fans Will Love</h1>
       <div class="minicont">
-        <p></p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
-        <div class="button">Get Started For Free</div>
+        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
       </div>
-      <img src="../c05/images/screen-mockups.svg" alt="screen mock-up">
+        <a href="http://127.0.0.1:5500/c05/index.html" class="button">Get Started For Free</a>
+      <img src="../c05/images/screen-mockups.svg" alt="screen mock-up" class="mockups">
       <div class="twocol">
         <div class="twocol-col">
           <img src="../c05/images/icon-communities.svg" alt="Communities">
