--- a/c05/index.html
+++ b/c05/index.html
@@ -27,38 +27,44 @@
       <div class="twocol">
         <div class="twocol-col">
           <img src="../c05/images/icon-communities.svg" alt="Communities">
-          <h1>1.4k+</h1>
+          <h2>1.4k+</h2>
           <p>Communities Formed</p>
         </div>
         <div class="twocol-col">
           <img src="../c05/images/icon-messages.svg" alt="Messages">
-          <h1>2.7m+</h1>
+          <h2>2.7m+</h2>
           <p>Messages Sent</p>
         </div>
       </div>
     </div>
+    <div class="feat">
+      <div class="feat-image feat-item"><img src="./images/illustration-grow-together.svg" alt="Grow together"></div>
+      <div class="feat-text feat-item">
+        <h2>Grow Together</h2>
+        <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+      </div>
+    </div>  
+    <div class="feat">
+      <div class="feat-image feat-item"><img src="./images/illustration-flowing-conversation.svg" alt="Flowing conversations"></div>
+      <div class="feat-text feat-item">
+        <h2>Flowing Conversations</h2>
+        <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+      </div>
+    </div>
+    <div class="feat">
+      <div class="feat-image feat-item"><img src="./images/illustration-your-users.svg" alt="Your users"></div>
+      <div class="feat-text feat-item">
+        <h2>Your Users</h2>
+        <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+      </div>
+    </div>
+
 
 
 
   </div>
 
 
-  1.4k+
-  Communities Formed
-
-
-
-  Grow Together
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-
-  Flowing Conversations
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads have 
-  just-in-time loading for a more natural flow.
-
-  Your Users
-  It takes no time at all to integrate Huddle with your app's authentication solution. This means, 
-  once signed in to your app, your users can start chatting immediately.
 
   Ready To Build Your Community?
   Get Started For Free
