--- a/c05/index.html
+++ b/c05/index.html
@@ -36,7 +36,8 @@
           <p>Messages Sent</p>
         </div>
       </div>
-    </div>
+    </div>  
+    <img src="./images/bg-section-top-desktop-1.svg" alt="" id="bg">
     <div class="feat">
       <div class="feat-image feat-item"><img src="./images/illustration-grow-together.svg" alt="Grow together"></div>
       <div class="feat-text feat-item">
@@ -44,6 +45,7 @@
         <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
       </div>
     </div>  
+    <img src="./images/bg-section-bottom-desktop-1.svg" alt="" id="bg">
     <div class="feat">
       <div class="feat-image feat-item"><img src="./images/illustration-flowing-conversation.svg" alt="Flowing conversations"></div>
       <div class="feat-text feat-item">
@@ -51,6 +53,7 @@
         <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
       </div>
     </div>
+    <img src="./images/bg-section-top-desktop-2.svg" alt="" id="bg">
     <div class="feat">
       <div class="feat-image feat-item"><img src="./images/illustration-your-users.svg" alt="Your users"></div>
       <div class="feat-text feat-item">
@@ -58,34 +61,43 @@
         <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
       </div>
     </div>
+    <img src="./images/bg-section-bottom-desktop-2.svg" alt="" id="bg">
+    
+    <div class="hero">
+    <h2>Ready To Build Your Community?</h2>
+    <a href="https://acutr.github.io/FEM-Challenges/c05/" class="button">Get Started For Free</a>
+    </div>
+
+    <img src="./images/bg-footer-top-desktop.svg" alt="" id="bg">
+    <footer>
+      <div class="twocol">
+        <div class="footer-col">
+          <img src="./images/logo.svg" alt="" class="footer-logo">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.</p>
+          <div class="phone">Phone: +1-543-123-4567</div>
+          <div class="email">example@huddle.com</div>
+          <div class="social">
+            
+          </div>
+        </div>
+        <div class="footer-col">
+          <h3>Newsletter</h3>
+          <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
+          <input type="email"><span class="subscribe button">Subscribe</span>
+        </div>
+      </div>
 
 
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Your Name Here</a>.
+      </p>
+    </footer>
 
 
   </div>
 
 
 
-  Ready To Build Your Community?
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
-  vestibulum a, ultrices quis sem.
-  
-  Phone: +1-543-123-4567
-  example@huddle.com
-
-  Newsletter
-  To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
-  send you spam or pass on your email address
-
-  Subscribe
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
 </body>
 </html>
