--- a/c05/index.html
+++ b/c05/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@700&display=swap"
+    rel="stylesheet">
+
   <title>Huddle landing page with curved sections</title>
 
 </head>
+
 <body>
   <div class="container">
     <header>
       <img src="../c05/images/logo.svg" alt="Logo">
-      <a href="https://acutr.github.io/FEM-Challenges/c05/" class="trybtn">Try it free</a>
+      <a href="#" class="trybtn">Try it free</a>
     </header>
     <div class="hero">
       <h1>Build The Community Your Fans Will Love</h1>
       <div class="minicont">
-        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create
+          connections with your users as you engage in genuine discussion.</p>
       </div>
-        <a href="https://acutr.github.io/FEM-Challenges/c05/" class="button">Get Started For Free</a>
+      <a href="#" class="button">Get Started For Free</a>
       <img src="../c05/images/screen-mockups.svg" alt="screen mock-up" class="mockups">
       <div class="twocol">
         <div class="twocol-col">
@@ -36,21 +41,24 @@
           <p>Messages Sent</p>
         </div>
       </div>
-    </div>  
+    </div>
     <img src="./images/bg-section-top-desktop-1.svg" alt="" id="bg">
     <div class="feat">
       <div class="feat-image feat-item"><img src="./images/illustration-grow-together.svg" alt="Grow together"></div>
       <div class="feat-text feat-item">
         <h2>Grow Together</h2>
-        <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+        <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the
+          insightful conversations you miss out on with a feedback form.</p>
       </div>
-    </div>  
+    </div>
     <img src="./images/bg-section-bottom-desktop-1.svg" alt="" id="bg">
     <div class="feat">
-      <div class="feat-image feat-item"><img src="./images/illustration-flowing-conversation.svg" alt="Flowing conversations"></div>
+      <div class="feat-image feat-item"><img src="./images/illustration-flowing-conversation.svg"
+          alt="Flowing conversations"></div>
       <div class="feat-text feat-item">
         <h2>Flowing Conversations</h2>
-        <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+        <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading
+          for a more natural flow.</p>
       </div>
     </div>
     <img src="./images/bg-section-top-desktop-2.svg" alt="" id="bg">
@@ -58,38 +66,46 @@
       <div class="feat-image feat-item"><img src="./images/illustration-your-users.svg" alt="Your users"></div>
       <div class="feat-text feat-item">
         <h2>Your Users</h2>
-        <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+        <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed
+          in to your app, your users can start chatting immediately.</p>
       </div>
     </div>
     <img src="./images/bg-section-bottom-desktop-2.svg" alt="" id="bg">
-    
+
     <div class="hero">
-    <h2>Ready To Build Your Community?</h2>
-    <a href="https://acutr.github.io/FEM-Challenges/c05/" class="button">Get Started For Free</a>
+      <h2>Ready To Build Your Community?</h2>
+      <a href="#" class="button">Get Started For Free</a>
     </div>
 
     <img src="./images/bg-footer-top-desktop.svg" alt="" id="bg">
     <footer>
       <div class="footer-col">
         <img src="./images/logo.svg" alt="" class="footer-logo">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a,
+          ultrices quis sem.</p>
         <div class="phone">Phone: +1-543-123-4567</div>
         <div class="email">example@huddle.com</div>
         <div class="social">
-          
+          <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
         </div>
       </div>
       <div class="footer-col">
         <h3>Newsletter</h3>
-        <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
-        <input type="email"><span class="subscribe button">Subscribe</span>
+        <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or
+          pass on your email address</p>
+        <input type="email" name='email' placeholder="Your email"><span class="subscribe button">Subscribe</span>
       </div>
 
 
 
+    </footer>
+
+    <footer>
       <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>.
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://alex.utracki.com">Alex</a>.
       </p>
     </footer>
 
@@ -97,6 +113,7 @@
   </div>
 
 
-
+  <script src="https://kit.fontawesome.com/f085e8c524.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
