--- a/c05/index.html
+++ b/c05/index.html
@@ -96,6 +96,7 @@
         <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or
           pass on your email address</p>
         <input type="email" name='email' placeholder="Your email"><span class="subscribe button">Subscribe</span>
+        <p class="input-hint">Check your email please</p>
       </div>
 
 
