--- a/c06/design-system.html
+++ b/c06/design-system.html
@@ -120,8 +120,8 @@
             <div>
                 <nav>
                     <ul class="primary-navigation underline-indicators flex">
-                        <li class="active"><a class="uppercase text-white letter-spacing-2" href="#"><span>00</span>
-                                Active</a></li>
+                        <li class="active"><a class="uppercase text-white letter-spacing-2"
+                                href="#"><span>00</span>Active</a></li>
                         <li><a class="uppercase text-white letter-spacing-2" href="#"><span>01</span> Hovered</a></li>
                         <li><a class="uppercase text-white letter-spacing-2" href="#"><span>02</span> Idle</a></li>
                     </ul>
@@ -153,6 +153,14 @@
                     </div>
 
                     <!-- Numbers -->
+
+                    <div>
+                        <ul class="numbered-list flex">
+                            <li><a class="ff-serif text-white bg-dark" href="">1</a></li>
+                            <li><a class="ff-serif text-white bg-dark" href="">2</a></li>
+                            <li><a class="ff-serif text-white bg-dark" href="">3</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
