--- a/c06/design-system.html
+++ b/c06/design-system.html
@@ -131,7 +131,8 @@
             <!-- explore button -->
             <div class="flex" style="margin-top: 5rem;">
                 <div>
-                    <a href="#" class="large-button uppercase ff-serif fs-600 text-dark bg-white">Explore</a>
+                    <a href="#" class="large-button uppercase ff-serif fs-600 text-dark bg-white"
+                        style="margin:10rem;">Explore</a>
                 </div>
 
                 <div class="flow" style="--flow-space: 4rem">
@@ -156,9 +157,9 @@
 
                     <div>
                         <ul class="numbered-list flex">
-                            <li><a class="ff-serif text-white bg-dark" href="">1</a></li>
-                            <li><a class="ff-serif text-white bg-dark" href="">2</a></li>
-                            <li><a class="ff-serif text-white bg-dark" href="">3</a></li>
+                            <li class="active"><a class="ff-serif fs-600 text-white bg-dark" href="#">1</a></li>
+                            <li><a class="ff-serif fs-600 text-white bg-dark" href="#">2</a></li>
+                            <li><a class="ff-serif fs-600 text-white bg-dark" href="#">3</a></li>
                         </ul>
                     </div>
                 </div>
