--- a/c06/index.html
+++ b/c06/index.html
@@ -10,44 +10,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-dark text-white">
+<body class="home">
 
-    <div class="container">
-        <h1>Design System</h1>
+    <header class="flex">
+        <div>
+            <img src="./starter-code/assets/shared/logo.svg" class="logo" alt="Logo">
+        </div>
+        <nav>
+            <ul class="primary-navigation underline-indicators flex">
+                <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2"
+                        href="#"><span>00</span> Home</a>
+                </li>
+                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#"><span>01</span>
+                        Destination</a></li>
+                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#"><span>02</span> Crew</a></li>
+                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#"><span>03</span>
+                        Technology</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <section id="colors">
-            <h2><span>01</span> colors</h2>
-
-            <div class="flex" style="justify-content: space-around">
-                <div style="width: 100%;">
-                    <div class="bg-dark text-white" style="padding: 3rem 1rem 1rem; border: 1px solid white;">
-                        #0B0D17
-                    </div>
-                    <p><span class="text-accent">RGB</span> 11, 13, 23</p>
-                    <p><span class="text-accent">HSL</span> 230, 35%, 7%</p>
-                </div>
-                <div style="width: 100%;">
-                    <div class="bg-accent text-dark" style="padding: 3rem 1rem 1rem; border: 1px solid white;">
-                        #0B0D17
-                    </div>
-                    <p><span class="text-accent">RGB</span> 208, 214, 249</p>
-                    <p><span class="text-accent">HSL</span> 231, 77%, 90%</p>
-                </div>
-                <div style="width: 100%;">
-                    <div class="bg-white text-dark" style="padding: 3rem 1rem 1rem; border: 1px solid white;">
-                        #FFFFFF
-                    </div>
-                    <p><span class="text-accent">RGB</span> 255, 255, 255</p>
-                    <p><span class="text-accent">HSL</span> 0, 0%, 100%</p>
-                </div>
-            </div>
-
-
-
-
-
-        </section>
+    <div class="grid-container">
+        <div>
+            <h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">So, you want to travel to <span
+                    class="fs-900 ff-serif text-white d-block">Space</span></h1>
+            <p>Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover
+                kind
+                of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world
+                experience!
+            </p>
+        </div>
+        <div>
+            <a href="#" class="large-button uppercase ff-serif fs-600 text-dark bg-white">Explore</a>
+        </div>
     </div>
+
 
 </body>
 
