--- a/c06/index.html
+++ b/c06/index.html
@@ -8,40 +8,35 @@
     <title>Space Website</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <script src="index.js" defer></script>
 </head>
 
 <body class="home">
 
-    <header class="flex">
+    <header class="primary-header flex">
         <div>
             <img src="./starter-code/assets/shared/logo.svg" class="logo" alt="Logo">
         </div>
+        <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only" aria-expanded="false">Menu</span></button>
         <nav>
-            <ul class="primary-navigation underline-indicators flex">
-                <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2"
-                        href="#"><span>00</span> Home</a>
+            <ul class="primary-navigation underline-indicators flex" data-visible="false">
+                <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#"><span>00</span> Home</a>
                 </li>
-                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#"><span>01</span>
-                        Destination</a></li>
-                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#"><span>02</span> Crew</a></li>
-                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#"><span>03</span>
-                        Technology</a></li>
+                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#"><span>01</span>Destination</a></li>
+                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#"><span>02</span>Crew</a></li>
+                <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#"><span>03</span>Technology</a></li>
             </ul>
         </nav>
     </header>
 
     <div class="grid-container">
         <div>
-            <h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">So, you want to travel to <span
-                    class="fs-900 ff-serif text-white d-block">Space</span></h1>
-            <p>Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover
-                kind
-                of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world
-                experience!
-            </p>
+            <h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">So, you want to travel to <span class="fs-900 ff-serif text-white d-block">Space</span></h1>
+            <p class="text-accent">Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</p>
         </div>
         <div>
-            <a href="#" class="large-button uppercase ff-serif fs-600 text-dark bg-white">Explore</a>
+            <a href="#" class="large-button uppercase ff-serif text-dark bg-white" style="margin-top:5rem">Explore</a>
         </div>
     </div>
 
