--- a/c06/destination.html
+++ b/c06/destination.html
@@ -48,21 +48,21 @@
       <button aria-selected="false" class="uppercase ff-sans-cond text-accent bg-dark letter-spacing-2">Titan</button>
     </div>
 
-    <article class="destination-info">
+    <article class="destination-info flow">
       <h2 class="fs-800 uppercase ff-serif">Moon</h2>
-      <p>See our planet as you’ve never seen it before. A perfect relaxing trip away to help zregain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
-    </article>
+      <p class="text-accent">See our planet as you’ve never seen it before. A perfect relaxing trip away to help zregain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
 
-    <div class="destination-meta flex">
-      <div>
-        <h3 class="text-accent ff-sans-cond fs-300 uppercase">Avg. distance</h3>
-        <p class="fs-500 ff-serif uppercase">384,400 km</p>
+      <div class="flex">
+        <div>
+          <h3 class="text-accent ff-sans-cond fs-300 uppercase">Avg. distance</h3>
+          <p class="fs-500 ff-serif uppercase">384,400 km</p>
+        </div>
+        <div>
+          <h3 class="text-accent ff-sans-cond fs-300 uppercase">Est. travel time</h3>
+          <p class="fs-500 ff-serif uppercase">3 days</p>
+        </div>
       </div>
-      <div>
-        <h3 class="text-accent ff-sans-cond fs-300 uppercase">Est. travel time</h3>
-        <p class="fs-500 ff-serif uppercase">3 days</p>
-      </div>
-    </div>
+    </article>
 
   </main>
 </body>
