--- a/c06/index.html
+++ b/c06/index.html
@@ -38,7 +38,7 @@
             <p class="text-accent">Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</p>
         </div>
         <div>
-            <a href="#" class="large-button uppercase ff-serif text-dark bg-white" style="margin-top:5rem">Explore</a>
+            <a href="destination.html" class="large-button uppercase ff-serif text-dark bg-white" style="margin-top:5rem">Explore</a>
         </div>
     </main>
 
