--- a/c06/crew.html
+++ b/c06/crew.html
@@ -38,7 +38,7 @@
   <main id="main" class="grid-container grid-container--crew flow">
     <h1 class="numbered-title"><span aria-hidden="true">02</span>Meet your crew</h1>
 
-    <div class="dot-indicators flex tab-list">
+    <div class="dot-indicators flex tab-list" role="tablist">
       <button aria-selected="true" role="tab" tabindex="0" data-image="commander-image" aria-controls="commander-tab"><span class="sr-only">The commander</span></button>
       <button aria-selected="false" role="tab" tabindex="-1" data-image="ms-image" aria-controls="ms-tab"><span class="sr-only">The mission specialist</span></button>
       <button aria-selected="false" role="tab" tabindex="-1" data-image="pilot-image" aria-controls="pilot-tab"><span class="sr-only">The pilot</span></button>
